test LTO gains for coreboot 24.12 based boards
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-qemu-tpm1.config
+++ b/config/coreboot-qemu-tpm1.config
@@ -12,7 +12,7 @@ CONFIG_COMPILER_GCC=y
 # CONFIG_COMPILER_LLVM_CLANG is not set
 # CONFIG_ANY_TOOLCHAIN is not set
 CONFIG_CCACHE=y
-# CONFIG_LTO is not set
+CONFIG_LTO=y
 # CONFIG_IWYU is not set
 # CONFIG_FMD_GENPARSER is not set
 # CONFIG_UTIL_GENPARSER is not set
