--- a/boards/omnigul/omnigul.config
+++ b/boards/omnigul/omnigul.config
@@ -5,16 +5,10 @@
 
 export CONFIG_COREBOOT=y
 export CONFIG_COREBOOT_VERSION=mrchromebox
-export CONFIG_LINUX_VERSION=6.6.30
+export CONFIG_LINUX_VERSION=6.1.8
 
 CONFIG_COREBOOT_CONFIG=config/coreboot-omnigul.config
 CONFIG_LINUX_CONFIG=config/linux-omnigul.config
-
-#Enable DEBUG output
-#export CONFIG_DEBUG_OUTPUT=y
-#export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=y
-#Enable TPM2 pcap output under /tmp
-#export CONFIG_TPM2_CAPTURE_PCAP=y
 
 # Since the TPM 2.0 implementation in the CR50 is not complete
 # we are disabling TPM Disk Unlock
@@ -22,7 +16,6 @@ CONFIG_TPM_NO_LUKS_DISK_UNLOCK=y
 
 #On-demand hardware support (modules.cpio)
 CONFIG_LINUX_USB=y
-CONFIG_LINUX_E1000=n
 CONFIG_MOBILE_TETHERING=y
 
 #Modules packed into tools.cpio
@@ -49,8 +42,17 @@ CONFIG_TPMTOTP=y
 #HOTP based remote attestation for supported USB Security dongle
 #With/Without TPM support
 CONFIG_HOTPKEY=n
+#TODO: clone into hotp variant, uncomment there
+
+
+#platform locking finalization (PR0)
+CONFIG_IO386=y
+export CONFIG_FINALIZE_PLATFORM_LOCKING=y
+
+
 #Nitrokey Storage admin tool (deprecated)
 #CONFIG_NKSTORECLI=n
+
 #GUI Support
 #Console based Whiptail support(Console based, no FB):
 #CONFIG_SLANG=y
@@ -58,6 +60,7 @@ CONFIG_HOTPKEY=n
 #FBWhiptail based (Graphical):
 CONFIG_CAIRO=y
 CONFIG_FBWHIPTAIL=y
+
 #Additional tools (tools.cpio):
 #SSH server (requires ethernet drivers, eg: CONFIG_LINUX_E1000E)
 CONFIG_DROPBEAR=y
@@ -70,6 +73,13 @@ export CONFIG_TPM2_TOOLS=y
 export CONFIG_PRIMARY_KEY_TYPE=ecc
 #TPM1 requirements
 #export CONFIG_TPM=y
+#Enable DEBUG output
+export CONFIG_DEBUG_OUTPUT=n
+export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=n
+#Enable TPM2 pcap output under /tmp
+export CONFIG_TPM2_CAPTURE_PCAP=n
+#Enable quiet mode: technical information logged under /tmp/debug.log
+export CONFIG_QUIET_MODE=y
 export CONFIG_BOOTSCRIPT=/bin/gui-init
 export CONFIG_BOOT_REQ_HASH=n
 export CONFIG_BOOT_REQ_ROLLBACK=n
@@ -78,4 +88,3 @@ export CONFIG_BOOT_KERNEL_REMOVE=""
 export CONFIG_BOOT_DEV="/dev/sda2"
 export CONFIG_BOARD_NAME="Google Omnigul"
 export CONFIG_FLASH_OPTIONS="flashprog --progress --programmer internal --ifd -i bios -i fd"
-export CONFIG_AUTO_BOOT_TIMEOUT=5
