omnigol : save linux/coreboot config changes in oldconfig
Repro:
./docker_repro.sh make BOARD=omnigul linux.save_in_olddefconfig_format_in_place
./docker_repro.sh make BOARD=omnigul coreboot.save_in_oldconfig_format_in_place

Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-omnigul.config
+++ b/config/coreboot-omnigul.config
@@ -184,6 +184,7 @@ CONFIG_ME_BIN_PATH="3rdparty/blobs/mainboard/google/brya/brya/omnigul/me.bin"
 # CONFIG_BOARD_GOOGLE_AGAH is not set
 # CONFIG_BOARD_GOOGLE_ANAHERA is not set
 # CONFIG_BOARD_GOOGLE_ANAHERA4ES is not set
+# CONFIG_BOARD_GOOGLE_ANRAGGAR is not set
 # CONFIG_BOARD_GOOGLE_AURASH is not set
 # CONFIG_BOARD_GOOGLE_BANSHEE is not set
 # CONFIG_BOARD_GOOGLE_BRASK is not set
@@ -192,6 +193,7 @@ CONFIG_ME_BIN_PATH="3rdparty/blobs/mainboard/google/brya/brya/omnigul/me.bin"
 # CONFIG_BOARD_GOOGLE_CRAASKOV is not set
 # CONFIG_BOARD_GOOGLE_CONSTITUTION is not set
 # CONFIG_BOARD_GOOGLE_CROTA is not set
+# CONFIG_BOARD_GOOGLE_DOCHI is not set
 # CONFIG_BOARD_GOOGLE_FELWINTER is not set
 # CONFIG_BOARD_GOOGLE_GAELIN is not set
 # CONFIG_BOARD_GOOGLE_GIMBLE is not set
@@ -209,11 +211,11 @@ CONFIG_ME_BIN_PATH="3rdparty/blobs/mainboard/google/brya/brya/omnigul/me.bin"
 # CONFIG_BOARD_GOOGLE_MOLI is not set
 # CONFIG_BOARD_GOOGLE_NIVVIKS is not set
 # CONFIG_BOARD_GOOGLE_NEREID is not set
+# CONFIG_BOARD_GOOGLE_NOKRIS is not set
 CONFIG_BOARD_GOOGLE_OMNIGUL=y
 # CONFIG_BOARD_GOOGLE_OSIRIS is not set
 # CONFIG_BOARD_GOOGLE_PIRRHA is not set
 # CONFIG_BOARD_GOOGLE_PRIMUS is not set
-# CONFIG_BOARD_GOOGLE_PRIMUS4ES is not set
 # CONFIG_BOARD_GOOGLE_PUJJO is not set
 # CONFIG_BOARD_GOOGLE_QUANDISO is not set
 # CONFIG_BOARD_GOOGLE_REDRIX is not set
@@ -230,9 +232,7 @@ CONFIG_BOARD_GOOGLE_OMNIGUL=y
 # CONFIG_BOARD_GOOGLE_YAVIKS is not set
 # CONFIG_BOARD_GOOGLE_YAVILLA is not set
 # CONFIG_BOARD_GOOGLE_ZYDRON is not set
-# CONFIG_BOARD_GOOGLE_NOKRIS is not set
-# CONFIG_BOARD_GOOGLE_DOCHI is not set
-# CONFIG_BOARD_GOOGLE_ANRAGGAR is not set
+# CONFIG_BOARD_GOOGLE_XOL is not set
 
 #
 # Butterfly
@@ -290,36 +290,37 @@ CONFIG_BOARD_GOOGLE_OMNIGUL=y
 #
 # Dedede
 #
+# CONFIG_BOARD_GOOGLE_BEADRIX is not set
+# CONFIG_BOARD_GOOGLE_BLIPPER is not set
 # CONFIG_BOARD_GOOGLE_BOTEN is not set
-# CONFIG_BOARD_GOOGLE_DIBBI is not set
+# CONFIG_BOARD_GOOGLE_BOXY is not set
+# CONFIG_BOARD_GOOGLE_BUGZZY is not set
+# CONFIG_BOARD_GOOGLE_CAPPY2 is not set
+# CONFIG_BOARD_GOOGLE_CORORI is not set
+# CONFIG_BOARD_GOOGLE_CRET is not set
 # CONFIG_BOARD_GOOGLE_DEDEDE is not set
+# CONFIG_BOARD_GOOGLE_DEXI is not set
+# CONFIG_BOARD_GOOGLE_DIBBI is not set
+# CONFIG_BOARD_GOOGLE_DITA is not set
 # CONFIG_BOARD_GOOGLE_DRAWCIA is not set
+# CONFIG_BOARD_GOOGLE_DRIBLEE is not set
+# CONFIG_BOARD_GOOGLE_GALTIC is not set
+# CONFIG_BOARD_GOOGLE_GOOEY is not set
 # CONFIG_BOARD_GOOGLE_HABOKI is not set
-# CONFIG_BOARD_GOOGLE_MADOO is not set
-# CONFIG_BOARD_GOOGLE_WADDLEDOO is not set
-# CONFIG_BOARD_GOOGLE_WADDLEDEE is not set
+# CONFIG_BOARD_GOOGLE_KRACKO is not set
 # CONFIG_BOARD_GOOGLE_LALALA is not set
+# CONFIG_BOARD_GOOGLE_LANTIS is not set
+# CONFIG_BOARD_GOOGLE_MADOO is not set
 # CONFIG_BOARD_GOOGLE_MAGOLOR is not set
 # CONFIG_BOARD_GOOGLE_METAKNIGHT is not set
-# CONFIG_BOARD_GOOGLE_LANTIS is not set
-# CONFIG_BOARD_GOOGLE_GALTIC is not set
-# CONFIG_BOARD_GOOGLE_SASUKE is not set
-# CONFIG_BOARD_GOOGLE_STORO is not set
-# CONFIG_BOARD_GOOGLE_SASUKETTE is not set
-# CONFIG_BOARD_GOOGLE_KRACKO is not set
-# CONFIG_BOARD_GOOGLE_BLIPPER is not set
-# CONFIG_BOARD_GOOGLE_CRET is not set
 # CONFIG_BOARD_GOOGLE_PIRIKA is not set
-# CONFIG_BOARD_GOOGLE_CAPPY2 is not set
-# CONFIG_BOARD_GOOGLE_BUGZZY is not set
-# CONFIG_BOARD_GOOGLE_CORORI is not set
-# CONFIG_BOARD_GOOGLE_DRIBLEE is not set
-# CONFIG_BOARD_GOOGLE_GOOEY is not set
-# CONFIG_BOARD_GOOGLE_BEADRIX is not set
+# CONFIG_BOARD_GOOGLE_SASUKE is not set
+# CONFIG_BOARD_GOOGLE_SASUKETTE is not set
+# CONFIG_BOARD_GOOGLE_STORO is not set
 # CONFIG_BOARD_GOOGLE_SHOTZO is not set
 # CONFIG_BOARD_GOOGLE_TARANZA is not set
-# CONFIG_BOARD_GOOGLE_BOXY is not set
-# CONFIG_BOARD_GOOGLE_DEXI is not set
+# CONFIG_BOARD_GOOGLE_WADDLEDEE is not set
+# CONFIG_BOARD_GOOGLE_WADDLEDOO is not set
 
 #
 # Drallion
@@ -581,18 +582,18 @@ CONFIG_BOARD_GOOGLE_OMNIGUL=y
 #
 # Rex
 #
-# CONFIG_BOARD_GOOGLE_REX0 is not set
-# CONFIG_BOARD_GOOGLE_SCREEBO is not set
-# CONFIG_BOARD_GOOGLE_SCREEBO4ES is not set
-# CONFIG_BOARD_GOOGLE_KARIS is not set
-# CONFIG_BOARD_GOOGLE_KARIS4ES is not set
-# CONFIG_BOARD_GOOGLE_REX_EC_ISH is not set
-# CONFIG_BOARD_GOOGLE_OVIS is not set
-# CONFIG_BOARD_GOOGLE_OVIS4ES is not set
 # CONFIG_BOARD_GOOGLE_DEKU is not set
 # CONFIG_BOARD_GOOGLE_DEKU4ES is not set
+# CONFIG_BOARD_GOOGLE_KARIS is not set
+# CONFIG_BOARD_GOOGLE_KARIS4ES is not set
+# CONFIG_BOARD_GOOGLE_OVIS is not set
+# CONFIG_BOARD_GOOGLE_OVIS4ES is not set
+# CONFIG_BOARD_GOOGLE_REX0 is not set
+# CONFIG_BOARD_GOOGLE_REX_EC_ISH is not set
 # CONFIG_BOARD_GOOGLE_REX4ES is not set
 # CONFIG_BOARD_GOOGLE_REX4ES_EC_ISH is not set
+# CONFIG_BOARD_GOOGLE_SCREEBO is not set
+# CONFIG_BOARD_GOOGLE_SCREEBO4ES is not set
 
 #
 # Sarien
@@ -739,7 +740,6 @@ CONFIG_PCIEXP_CLK_PM=y
 # CONFIG_DRIVERS_UART_8250IO is not set
 CONFIG_PC_CMOS_BASE_PORT_BANK1=0x72
 CONFIG_FSP_TEMP_RAM_SIZE=0x20000
-CONFIG_HEAP_SIZE=0x10000
 CONFIG_EC_GPE_SCI=0x50
 CONFIG_TPM_MEASURED_BOOT=y
 CONFIG_LINUX_COMMAND_LINE=""
@@ -755,6 +755,7 @@ CONFIG_BOARD_ROMSIZE_KB_32768=y
 # CONFIG_COREBOOT_ROMSIZE_KB_10240 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_12288 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_16384 is not set
+# CONFIG_COREBOOT_ROMSIZE_KB_24576 is not set
 CONFIG_COREBOOT_ROMSIZE_KB_32768=y
 # CONFIG_COREBOOT_ROMSIZE_KB_65536 is not set
 CONFIG_COREBOOT_ROMSIZE_KB=32768
@@ -797,6 +798,7 @@ CONFIG_ACPI_BERT_SIZE=0x10000
 CONFIG_DRIVERS_I2C_DESIGNWARE_CLOCK_MHZ=133
 CONFIG_VBOOT_HASH_BLOCK_SIZE=0x1000
 CONFIG_PRERAM_CBFS_CACHE_SIZE=0x4000
+CONFIG_DOMAIN_RESOURCE_32BIT_LIMIT=0xe0000000
 CONFIG_ACPI_CPU_STRING="CP%02X"
 CONFIG_STACK_SIZE=0x2000
 CONFIG_SOC_INTEL_ALDERLAKE=y
@@ -853,6 +855,7 @@ CONFIG_SOC_INTEL_GFX_FRAMEBUFFER_OFFSET=0x0
 CONFIG_PCIE_LTR_MAX_SNOOP_LATENCY=0x1003
 CONFIG_PCIE_LTR_MAX_NO_SNOOP_LATENCY=0x1003
 CONFIG_SOC_INTEL_CSE_FW_PARTITION_CMOS_OFFSET=68
+CONFIG_SOC_PHYSICAL_ADDRESS_WIDTH=0
 CONFIG_INTEL_TME=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_P2SB=y
 CONFIG_FIXED_SMBUS_IO_BASE=0xefa0
@@ -895,6 +898,7 @@ CONFIG_FSP_HYPERTHREADING=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_CSE=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_HECI1_DISABLE_USING_PMC_IPC=y
 CONFIG_SOC_INTEL_STORE_CSE_FW_VERSION=y
+CONFIG_SOC_INTEL_STORE_ISH_FW_VERSION=y
 CONFIG_SOC_INTEL_CSE_SEND_EOP_ASYNC=y
 # CONFIG_SOC_INTEL_CSE_RW_UPDATE is not set
 CONFIG_SOC_INTEL_CSE_FMAP_NAME="SI_ME"
@@ -963,8 +967,8 @@ CONFIG_SOC_INTEL_COMMON_BLOCK_SMM_IO_TRAP=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_SMM_S5_DELAY_MS=0
 CONFIG_SOC_INTEL_COMMON_BLOCK_SPI=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_SA=y
-CONFIG_DOMAIN_RESOURCE_32BIT_LIMIT=0xe0000000
 CONFIG_SOC_INTEL_COMMON_BLOCK_TCSS=y
+CONFIG_TCSS_HAS_USBC_OPS=y
 # CONFIG_ENABLE_TCSS_DISPLAY_DETECTION is not set
 CONFIG_ENABLE_TCSS_USB_DETECTION=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_THERMAL=y
@@ -976,6 +980,9 @@ CONFIG_SOC_INTEL_COMMON_BLOCK_USB4=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_USB4_PCIE=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_USB4_XHCI=y
 CONFIG_SOC_INTEL_ENABLE_USB4_PCIE_RESOURCES=y
+CONFIG_DEFAULT_SOFTWARE_CONNECTION_MANAGER=y
+# CONFIG_FIRMWARE_CONNECTION_MANAGER is not set
+CONFIG_SOFTWARE_CONNECTION_MANAGER=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_VTD=y
 # CONFIG_ENABLE_EARLY_DMA_PROTECTION is not set
 CONFIG_SOC_INTEL_COMMON_BLOCK_XDCI=y
@@ -1155,13 +1162,9 @@ CONFIG_PCI_ALLOW_BUS_MASTER_ANY_DEVICE=y
 # CONFIG_PCIEXP_LANE_ERR_STAT_CLEAR is not set
 CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM_ABOVE_4G=y
 # CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM_BELOW_4G is not set
-CONFIG_DEFAULT_SOFTWARE_CONNECTION_MANAGER=y
-# CONFIG_FIRMWARE_CONNECTION_MANAGER is not set
-CONFIG_SOFTWARE_CONNECTION_MANAGER=y
 # CONFIG_EARLY_PCI_BRIDGE is not set
 CONFIG_SUBSYSTEM_VENDOR_ID=0x0000
 CONFIG_SUBSYSTEM_DEVICE_ID=0x0000
-CONFIG_INTEL_GMA_HAVE_VBT=y
 CONFIG_INTEL_GMA_ADD_VBT=y
 # CONFIG_SOFTWARE_I2C is not set
 CONFIG_I2C_TRANSFER_TIMEOUT_US=500000
@@ -1262,6 +1265,7 @@ CONFIG_DRIVERS_SOUNDWIRE_MAX98373=y
 CONFIG_DRIVERS_SPI_ACPI=y
 CONFIG_DRIVERS_USB_ACPI=y
 CONFIG_DRIVERS_WIFI_GENERIC=y
+CONFIG_DRIVERS_MTK_WIFI=y
 CONFIG_DRIVERS_WWAN_FM350GL=y
 CONFIG_MP_SERVICES_PPI=y
 CONFIG_MP_SERVICES_PPI_V2=y
@@ -1340,6 +1344,7 @@ CONFIG_BOOT_DEVICE_SPI_FLASH=y
 CONFIG_BOOT_DEVICE_MEMORY_MAPPED=y
 CONFIG_BOOT_DEVICE_SUPPORTS_WRITES=y
 CONFIG_RTC=y
+CONFIG_HEAP_SIZE=0x100000
 
 #
 # Console
@@ -1402,6 +1407,7 @@ CONFIG_PAYLOAD_FILE="@BOARD_BUILD_DIR@/bzImage"
 CONFIG_PAYLOAD_OPTIONS=""
 # CONFIG_PXE is not set
 CONFIG_LINUX_INITRD="@BOARD_BUILD_DIR@/initrd.cpio.xz"
+# CONFIG_PAYLOAD_IS_FLAT_BINARY is not set
 CONFIG_COMPRESS_SECONDARY_PAYLOAD=y
 
 #
