CircleCI: have kgpe-d16_workstation depend on librem_l1um for its coreboot 4.11 crossgcc buildstack
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -550,7 +550,7 @@ workflows:
           target: kgpe-d16_workstation
           subcommand: ""
           requires:
-            - x86-musl-cross-make
+            - librem_l1um
 
       - build:
           name: kgpe-d16_workstation-usb_keyboard
