Intel config/coreboot-* boards: CONFIG_USE_BLOBS=y since 24.12 is based on git repo now
Repro:
sudo sed -i 's/# CONFIG_USE_BLOBS is not set/CONFIG_USE_BLOBS=y/g' config/coreboot-*
sudo git restore config/coreboot-kgpe-d16_server.config config/coreboot-kgpe-d16_workstation-usb_keyboard.config config/coreboot-kgpe-d16_workstation.config
./docker_repro.sh
find ./boards/ -type d | awk -F "/" {'print $3'} | while read board; do make BOARD=$board coreboot.save_in_oldconfig_format_in_place; done

Test @miczyg1 hypothesis from https://github.com/linuxboot/heads/issues/1940#issuecomment-2772425103
- We use git repo for coreboot 24.12 as opposed to tarball for previous 22.04.01
  - 3rdparty microcode git submodule might be empty for some reason if not instructed to be synced by kconfig)
    - TODO: Review https://github.com/linuxboot/heads/issues/1940#issuecomment-2772425103

Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-t440p.config
+++ b/config/coreboot-t440p.config
@@ -24,7 +24,9 @@ CONFIG_SEPARATE_ROMSTAGE=y
 CONFIG_INCLUDE_CONFIG_FILE=y
 CONFIG_COLLECT_TIMESTAMPS=y
 # CONFIG_TIMESTAMPS_ON_CONSOLE is not set
-# CONFIG_USE_BLOBS is not set
+CONFIG_USE_BLOBS=y
+# CONFIG_USE_AMD_BLOBS is not set
+# CONFIG_USE_QC_BLOBS is not set
 # CONFIG_COVERAGE is not set
 # CONFIG_UBSAN is not set
 CONFIG_HAVE_ASAN_IN_ROMSTAGE=y
@@ -220,7 +222,6 @@ CONFIG_PS2K_EISAID="LEN0071"
 CONFIG_PS2M_EISAID="LEN0036"
 CONFIG_THINKPADEC_HKEY_EISAID="LEN0068"
 CONFIG_GFX_GMA_PANEL_1_PORT="eDP"
-CONFIG_LENOVO_TBFW_BIN=""
 CONFIG_D3COLD_SUPPORT=y
 CONFIG_GFX_GMA_PANEL_1_ON_EDP=y
 # CONFIG_DRIVERS_UART_8250IO is not set
