--- a/config/coreboot-x230-legacy-flash.config
+++ b/config/coreboot-x230-legacy-flash.config
@@ -25,7 +25,7 @@ CONFIG_SEPARATE_ROMSTAGE=y
 CONFIG_INCLUDE_CONFIG_FILE=y
 CONFIG_COLLECT_TIMESTAMPS=y
 CONFIG_TIMESTAMPS_ON_CONSOLE=y
-# CONFIG_USE_BLOBS is not set
+CONFIG_USE_BLOBS=y
 # CONFIG_COVERAGE is not set
 # CONFIG_UBSAN is not set
 CONFIG_HAVE_ASAN_IN_RAMSTAGE=y
