--- a/config/coreboot-t430-legacy-flash.config
+++ b/config/coreboot-t430-legacy-flash.config
@@ -24,7 +24,7 @@ CONFIG_COMPRESS_RAMSTAGE_LZMA=y
 CONFIG_INCLUDE_CONFIG_FILE=y
 CONFIG_COLLECT_TIMESTAMPS=y
 CONFIG_TIMESTAMPS_ON_CONSOLE=y
-# CONFIG_USE_BLOBS is not set
+CONFIG_USE_BLOBS=y
 # CONFIG_COVERAGE is not set
 # CONFIG_UBSAN is not set
 CONFIG_HAVE_ASAN_IN_RAMSTAGE=y
