--- a/config/coreboot-x230-maximized-fhd_edp.config
+++ b/config/coreboot-x230-maximized-fhd_edp.config
@@ -24,7 +24,9 @@ CONFIG_SEPARATE_ROMSTAGE=y
 CONFIG_INCLUDE_CONFIG_FILE=y
 CONFIG_COLLECT_TIMESTAMPS=y
 CONFIG_TIMESTAMPS_ON_CONSOLE=y
-# CONFIG_USE_BLOBS is not set
+CONFIG_USE_BLOBS=y
+# CONFIG_USE_AMD_BLOBS is not set
+# CONFIG_USE_QC_BLOBS is not set
 # CONFIG_COVERAGE is not set
 # CONFIG_UBSAN is not set
 CONFIG_HAVE_ASAN_IN_RAMSTAGE=y
@@ -221,7 +223,6 @@ CONFIG_PS2K_EISAID="PNP0303"
 CONFIG_PS2M_EISAID="LEN0020"
 CONFIG_THINKPADEC_HKEY_EISAID="LEN0068"
 CONFIG_GFX_GMA_PANEL_1_PORT="eDP"
-CONFIG_LENOVO_TBFW_BIN=""
 CONFIG_D3COLD_SUPPORT=y
 CONFIG_GFX_GMA_PANEL_1_ON_EDP=y
 # CONFIG_DRIVERS_UART_8250IO is not set
