--- a/config/coreboot-novacustom-v560tu.config
+++ b/config/coreboot-novacustom-v560tu.config
@@ -16,8 +16,9 @@ CONFIG_COMPILER_GCC=y
 # CONFIG_IWYU is not set
 # CONFIG_FMD_GENPARSER is not set
 # CONFIG_UTIL_GENPARSER is not set
-CONFIG_OPTION_BACKEND_NONE=y
-# CONFIG_USE_OPTION_TABLE is not set
+# CONFIG_OPTION_BACKEND_NONE is not set
+CONFIG_USE_OPTION_TABLE=y
+# CONFIG_STATIC_OPTION_TABLE is not set
 CONFIG_COMPRESS_RAMSTAGE_LZMA=y
 # CONFIG_COMPRESS_RAMSTAGE_LZ4 is not set
 CONFIG_SEPARATE_ROMSTAGE=y
@@ -504,11 +505,10 @@ CONFIG_CPU_INTEL_COMMON_VOLTAGE=y
 CONFIG_CPU_INTEL_COMMON_SMM=y
 CONFIG_PARALLEL_MP=y
 CONFIG_PARALLEL_MP_AP_WORK=y
-CONFIG_DEFAULT_X2APIC_LATE_WORKAROUND=y
-# CONFIG_XAPIC_ONLY is not set
+CONFIG_XAPIC_ONLY=y
 # CONFIG_X2APIC_ONLY is not set
 # CONFIG_X2APIC_RUNTIME is not set
-CONFIG_X2APIC_LATE_WORKAROUND=y
+# CONFIG_X2APIC_LATE_WORKAROUND is not set
 CONFIG_UDELAY_TSC=y
 CONFIG_TSC_MONOTONIC_TIMER=y
 CONFIG_HAVE_SMI_HANDLER=y
@@ -558,7 +558,7 @@ CONFIG_EC_DASHARO_EC=y
 #
 # Intel Firmware
 #
-# CONFIG_IFDTOOL_DISABLE_ME is not set
+CONFIG_IFDTOOL_DISABLE_ME=y
 CONFIG_HAVE_ME_BIN=y
 # CONFIG_STITCH_ME_BIN is not set
 # CONFIG_ME_REGION_ALLOW_CPU_READ_ACCESS is not set
@@ -657,7 +657,7 @@ CONFIG_PCI_ALLOW_BUS_MASTER_ANY_DEVICE=y
 CONFIG_PCIEXP_SUPPORT_RESIZABLE_BARS=y
 CONFIG_PCIEXP_LANE_ERR_STAT_CLEAR=y
 CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM_BELOW_4G=y
-CONFIG_PCIEXP_HOTPLUG_IO=0x800
+CONFIG_PCIEXP_HOTPLUG_IO=0x2000
 # CONFIG_EARLY_PCI_BRIDGE is not set
 CONFIG_SUBSYSTEM_VENDOR_ID=0x0000
 CONFIG_SUBSYSTEM_DEVICE_ID=0x0000
@@ -702,6 +702,7 @@ CONFIG_DRIVERS_I2C_DESIGNWARE=y
 CONFIG_DRIVERS_I2C_GENERIC=y
 CONFIG_DRIVERS_I2C_HID=y
 # CONFIG_DRIVERS_I2C_MAX98396 is not set
+CONFIG_FSP_USE_REPO=y
 # CONFIG_DISPLAY_HOBS is not set
 # CONFIG_DISPLAY_UPD_DATA is not set
 # CONFIG_BMP_LOGO is not set
@@ -710,6 +711,7 @@ CONFIG_PLATFORM_USES_FSP2_1=y
 CONFIG_PLATFORM_USES_FSP2_2=y
 CONFIG_PLATFORM_USES_FSP2_3=y
 CONFIG_PLATFORM_USES_FSP2_X86_32=y
+CONFIG_HAVE_INTEL_FSP_REPO=y
 CONFIG_ADD_FSP_BINARIES=y
 CONFIG_FSP_S_CBFS="fsps.bin"
 CONFIG_FSP_M_CBFS="fspm.bin"
@@ -726,13 +728,13 @@ CONFIG_FSP_USES_CB_DEBUG_EVENT_HANDLER=y
 # CONFIG_DISPLAY_FSP_TIMESTAMPS is not set
 CONFIG_FSP_UGOP_EARLY_SIGN_OF_LIFE=y
 CONFIG_FSP_ENABLE_SERIAL_DEBUG=y
-CONFIG_BUILDING_WITH_DEBUG_FSP=y
+CONFIG_FSP_MULTIPHASE_SI_INIT_RETURN_BROKEN=y
+# CONFIG_BUILDING_WITH_DEBUG_FSP is not set
 CONFIG_INTEL_GMA_ACPI=y
-CONFIG_VBT_CBFS_COMPRESSION_DEFAULT_LZ4=y
-# CONFIG_VBT_CBFS_COMPRESSION_LZMA is not set
-CONFIG_VBT_CBFS_COMPRESSION_LZ4=y
+CONFIG_VBT_CBFS_COMPRESSION_LZMA=y
+# CONFIG_VBT_CBFS_COMPRESSION_LZ4 is not set
 # CONFIG_VBT_CBFS_COMPRESSION_NONE is not set
-CONFIG_VBT_CBFS_COMPRESSION_ALGORITHM="lz4"
+CONFIG_VBT_CBFS_COMPRESSION_ALGORITHM="lzma"
 CONFIG_INTEL_GMA_OPREGION_2_1=y
 CONFIG_INTEL_GMA_VERSION_2=y
 CONFIG_DRIVERS_INTEL_PMC=y
