config/coreboot-novacustom*: unify in oldconfig format
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-novacustom-nv4x_adl.config
+++ b/config/coreboot-novacustom-nv4x_adl.config
@@ -152,7 +152,7 @@ CONFIG_INTEL_GMA_VBT_FILE="src/mainboard/$(MAINBOARDDIR)/variants/$(VARIANT_DIR)
 # CONFIG_DISABLE_HECI1_AT_PRE_BOOT is not set
 CONFIG_PRERAM_CBMEM_CONSOLE_SIZE=0x4000
 CONFIG_MAINBOARD_SMBIOS_PRODUCT_NAME="NV4xPZ"
-CONFIG_CONSOLE_POST=y
+# CONFIG_CONSOLE_POST is not set
 CONFIG_CMOS_DEFAULT_FILE="src/mainboard/$(MAINBOARDDIR)/cmos.default"
 CONFIG_CMOS_LAYOUT_FILE="src/mainboard/$(MAINBOARDDIR)/cmos.layout"
 CONFIG_MAX_SOCKET=1
@@ -175,7 +175,7 @@ CONFIG_MRC_SETTINGS_CACHE_SIZE=0x10000
 CONFIG_DRIVERS_INTEL_WIFI=y
 CONFIG_IFD_BIN_PATH="3rdparty/dasharo-blobs/novacustom/nv4x_adl/descriptor.bin"
 CONFIG_ME_BIN_PATH="3rdparty/dasharo-blobs/novacustom/nv4x_adl/me.bin"
-CONFIG_CONSOLE_CBMEM_BUFFER_SIZE=0x20000
+CONFIG_CONSOLE_CBMEM_BUFFER_SIZE=0x40000
 CONFIG_CARDBUS_PLUGIN_SUPPORT=y
 CONFIG_SPI_FLASH_DONT_INCLUDE_ALL_DRIVERS=y
 # CONFIG_DEBUG_SMI is not set
@@ -460,8 +460,8 @@ CONFIG_SOC_INTEL_COMMON_BLOCK_USB4=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_USB4_PCIE=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_USB4_XHCI=y
 CONFIG_SOC_INTEL_ENABLE_USB4_PCIE_RESOURCES=y
-# CONFIG_FIRMWARE_CONNECTION_MANAGER is not set
-CONFIG_SOFTWARE_CONNECTION_MANAGER=y
+CONFIG_FIRMWARE_CONNECTION_MANAGER=y
+# CONFIG_SOFTWARE_CONNECTION_MANAGER is not set
 CONFIG_SOC_INTEL_COMMON_BLOCK_VTD=y
 CONFIG_ENABLE_EARLY_DMA_PROTECTION=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_XDCI=y
@@ -649,10 +649,11 @@ CONFIG_ECAM_MMCONF_LENGTH=0x10000000
 CONFIG_PCI_ALLOW_BUS_MASTER=y
 CONFIG_PCI_SET_BUS_MASTER_PCI_BRIDGES=y
 CONFIG_PCI_ALLOW_BUS_MASTER_ANY_DEVICE=y
-CONFIG_PCIEXP_SUPPORT_RESIZABLE_BARS=y
-CONFIG_PCIEXP_LANE_ERR_STAT_CLEAR=y
-CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM_BELOW_4G=y
-CONFIG_PCIEXP_HOTPLUG_IO=0x2000
+# CONFIG_PCIEXP_SUPPORT_RESIZABLE_BARS is not set
+# CONFIG_PCIEXP_LANE_ERR_STAT_CLEAR is not set
+CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM_ABOVE_4G=y
+# CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM_BELOW_4G is not set
+CONFIG_PCIEXP_HOTPLUG_IO=0x800
 # CONFIG_EARLY_PCI_BRIDGE is not set
 CONFIG_SUBSYSTEM_VENDOR_ID=0x0000
 CONFIG_SUBSYSTEM_DEVICE_ID=0x0000
@@ -672,7 +673,6 @@ CONFIG_CRB_TPM_BASE_ADDRESS=0xfed40000
 # CONFIG_ELOG is not set
 CONFIG_CACHE_MRC_SETTINGS=y
 CONFIG_MRC_SETTINGS_PROTECT=y
-CONFIG_MRC_CACHE_USING_MRC_VERSION=y
 # CONFIG_DRIVERS_OPTION_CFR is not set
 # CONFIG_SMMSTORE is not set
 CONFIG_SPI_FLASH=y
@@ -713,14 +713,12 @@ CONFIG_FSP_FULL_FD=y
 CONFIG_FSP_T_RESERVED_SIZE=0x0
 CONFIG_FSP_M_XIP=y
 CONFIG_FSP_USES_CB_STACK=y
-CONFIG_HAVE_FSP_LOGO_SUPPORT=y
 CONFIG_FSP_COMPRESS_FSP_S_LZ4=y
 CONFIG_SOC_INTEL_COMMON_FSP_RESET=y
 CONFIG_FSPS_HAS_ARCH_UPD=y
 CONFIG_FSPS_USE_MULTI_PHASE_INIT=y
 CONFIG_FSP_USES_CB_DEBUG_EVENT_HANDLER=y
 # CONFIG_DISPLAY_FSP_TIMESTAMPS is not set
-CONFIG_FSP_UGOP_EARLY_SIGN_OF_LIFE=y
 CONFIG_FSP_ENABLE_SERIAL_DEBUG=y
 CONFIG_FSP_MULTIPHASE_SI_INIT_RETURN_BROKEN=y
 # CONFIG_BUILDING_WITH_DEBUG_FSP is not set
@@ -921,8 +919,7 @@ CONFIG_COMPRESS_SECONDARY_PAYLOAD=y
 # CONFIG_DISPLAY_FSP_CALLS_AND_STATUS is not set
 # CONFIG_DISPLAY_FSP_HEADER is not set
 # CONFIG_VERIFY_HOBS is not set
-# CONFIG_DISPLAY_FSP_VERSION_INFO is not set
-CONFIG_DISPLAY_FSP_VERSION_INFO_2=y
+CONFIG_DISPLAY_FSP_VERSION_INFO=y
 # CONFIG_ENABLE_FSP_ERROR_INFO is not set
 CONFIG_HAVE_GPIO_SNAPSHOT_VERIFY_SUPPORT=y
 # CONFIG_CHECK_GPIO_CONFIG_CHANGES is not set
