--- a/config/coreboot-novacustom-v540tu.config
+++ b/config/coreboot-novacustom-v540tu.config
@@ -126,7 +126,7 @@ CONFIG_DIMM_MAX=4
 CONFIG_DIMM_SPD_SIZE=1024
 CONFIG_FMDFILE=""
 # CONFIG_NO_POST is not set
-CONFIG_MAINBOARD_VENDOR="Clevo"
+CONFIG_MAINBOARD_VENDOR="Notebook"
 CONFIG_CBFS_SIZE=0x1000000
 # CONFIG_CONSOLE_SERIAL is not set
 CONFIG_MAX_CPUS=22
@@ -175,8 +175,7 @@ CONFIG_DRIVERS_INTEL_WIFI=y
 CONFIG_IFD_BIN_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/descriptor.bin"
 CONFIG_ME_BIN_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/me.bin"
 CONFIG_GBE_BIN_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/gbe.bin"
-CONFIG_CONSOLE_CBMEM_BUFFER_SIZE=0x200000
-CONFIG_PCIEXP_DEFAULT_MAX_RESIZABLE_BAR_BITS=36
+CONFIG_CONSOLE_CBMEM_BUFFER_SIZE=0x40000
 CONFIG_CARDBUS_PLUGIN_SUPPORT=y
 CONFIG_SPI_FLASH_DONT_INCLUDE_ALL_DRIVERS=y
 # CONFIG_DEBUG_SMI is not set
@@ -461,8 +460,8 @@ CONFIG_SOC_INTEL_COMMON_BLOCK_USB4=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_USB4_PCIE=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_USB4_XHCI=y
 CONFIG_SOC_INTEL_ENABLE_USB4_PCIE_RESOURCES=y
-# CONFIG_FIRMWARE_CONNECTION_MANAGER is not set
-CONFIG_SOFTWARE_CONNECTION_MANAGER=y
+CONFIG_FIRMWARE_CONNECTION_MANAGER=y
+# CONFIG_SOFTWARE_CONNECTION_MANAGER is not set
 CONFIG_SOC_INTEL_COMMON_BLOCK_VTD=y
 CONFIG_ENABLE_EARLY_DMA_PROTECTION=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_XDCI=y
@@ -505,10 +504,11 @@ CONFIG_CPU_INTEL_COMMON_VOLTAGE=y
 CONFIG_CPU_INTEL_COMMON_SMM=y
 CONFIG_PARALLEL_MP=y
 CONFIG_PARALLEL_MP_AP_WORK=y
-CONFIG_XAPIC_ONLY=y
+CONFIG_DEFAULT_X2APIC_LATE_WORKAROUND=y
+# CONFIG_XAPIC_ONLY is not set
 # CONFIG_X2APIC_ONLY is not set
 # CONFIG_X2APIC_RUNTIME is not set
-# CONFIG_X2APIC_LATE_WORKAROUND is not set
+CONFIG_X2APIC_LATE_WORKAROUND=y
 CONFIG_UDELAY_TSC=y
 CONFIG_TSC_MONOTONIC_TIMER=y
 CONFIG_HAVE_SMI_HANDLER=y
@@ -654,10 +654,11 @@ CONFIG_ECAM_MMCONF_LENGTH=0x10000000
 CONFIG_PCI_ALLOW_BUS_MASTER=y
 CONFIG_PCI_SET_BUS_MASTER_PCI_BRIDGES=y
 CONFIG_PCI_ALLOW_BUS_MASTER_ANY_DEVICE=y
-CONFIG_PCIEXP_SUPPORT_RESIZABLE_BARS=y
-CONFIG_PCIEXP_LANE_ERR_STAT_CLEAR=y
-CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM_BELOW_4G=y
-CONFIG_PCIEXP_HOTPLUG_IO=0x2000
+# CONFIG_PCIEXP_SUPPORT_RESIZABLE_BARS is not set
+# CONFIG_PCIEXP_LANE_ERR_STAT_CLEAR is not set
+CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM_ABOVE_4G=y
+# CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM_BELOW_4G is not set
+CONFIG_PCIEXP_HOTPLUG_IO=0x800
 # CONFIG_EARLY_PCI_BRIDGE is not set
 CONFIG_SUBSYSTEM_VENDOR_ID=0x0000
 CONFIG_SUBSYSTEM_DEVICE_ID=0x0000
@@ -710,7 +711,6 @@ CONFIG_PLATFORM_USES_FSP2_1=y
 CONFIG_PLATFORM_USES_FSP2_2=y
 CONFIG_PLATFORM_USES_FSP2_3=y
 CONFIG_PLATFORM_USES_FSP2_X86_32=y
-CONFIG_HAVE_INTEL_FSP_REPO=y
 CONFIG_ADD_FSP_BINARIES=y
 CONFIG_FSP_S_CBFS="fsps.bin"
 CONFIG_FSP_M_CBFS="fspm.bin"
@@ -727,9 +727,9 @@ CONFIG_FSP_USES_CB_DEBUG_EVENT_HANDLER=y
 # CONFIG_DISPLAY_FSP_TIMESTAMPS is not set
 CONFIG_FSP_UGOP_EARLY_SIGN_OF_LIFE=y
 CONFIG_FSP_ENABLE_SERIAL_DEBUG=y
-CONFIG_FSP_MULTIPHASE_SI_INIT_RETURN_BROKEN=y
 # CONFIG_BUILDING_WITH_DEBUG_FSP is not set
 CONFIG_INTEL_GMA_ACPI=y
+CONFIG_VBT_CBFS_COMPRESSION_DEFAULT_LZ4=y
 CONFIG_VBT_CBFS_COMPRESSION_LZMA=y
 # CONFIG_VBT_CBFS_COMPRESSION_LZ4 is not set
 # CONFIG_VBT_CBFS_COMPRESSION_NONE is not set
