--- a/config/coreboot-novacustom-v560tu.config
+++ b/config/coreboot-novacustom-v560tu.config
@@ -126,7 +126,7 @@ CONFIG_DIMM_MAX=4
 CONFIG_DIMM_SPD_SIZE=1024
 CONFIG_FMDFILE=""
 # CONFIG_NO_POST is not set
-CONFIG_MAINBOARD_VENDOR="Notebook"
+CONFIG_MAINBOARD_VENDOR="Clevo"
 CONFIG_CBFS_SIZE=0x1000000
 # CONFIG_CONSOLE_SERIAL is not set
 CONFIG_MAX_CPUS=22
