--- a/config/coreboot-novacustom-nv4x_adl.config
+++ b/config/coreboot-novacustom-nv4x_adl.config
@@ -6,7 +6,7 @@
 #
 # General setup
 #
-CONFIG_LOCALVERSION="v1.0.0-rc6"
+CONFIG_LOCALVERSION="v1.0.0 20251130"
 CONFIG_CBFS_PREFIX="fallback"
 CONFIG_COMPILER_GCC=y
 # CONFIG_COMPILER_LLVM_CLANG is not set
@@ -37,6 +37,7 @@ CONFIG_TSEG_STAGE_CACHE=y
 # CONFIG_UPDATE_IMAGE is not set
 CONFIG_BOOTSPLASH_IMAGE=y
 CONFIG_BOOTSPLASH_FILE="@BRAND_DIR@/bootsplash.jpg"
+CONFIG_BOOTSPLASH_REGION_LOGO_FILE=""
 CONFIG_BOOTSPLASH_CONVERT=y
 CONFIG_BOOTSPLASH_CONVERT_QUALITY=90
 # CONFIG_BOOTSPLASH_CONVERT_RESIZE is not set
@@ -153,9 +154,10 @@ CONFIG_INTEL_GMA_VBT_FILE="src/mainboard/$(MAINBOARDDIR)/variants/$(VARIANT_DIR)
 CONFIG_PRERAM_CBMEM_CONSOLE_SIZE=0x4000
 CONFIG_MAINBOARD_SMBIOS_PRODUCT_NAME="NV4xPZ"
 # CONFIG_CONSOLE_POST is not set
+CONFIG_FSP_FD_PATH="3rdparty/fsp/RaptorLakeFspBinPkg/Client/RaptorLakeP/Fsp.fd"
+CONFIG_MAX_SOCKET=1
 CONFIG_CMOS_DEFAULT_FILE="src/mainboard/$(MAINBOARDDIR)/cmos.default"
 CONFIG_CMOS_LAYOUT_FILE="src/mainboard/$(MAINBOARDDIR)/cmos.layout"
-CONFIG_MAX_SOCKET=1
 CONFIG_BOOT_DEVICE_SPI_FLASH_BUS=0
 CONFIG_BOARD_CLEVO_ADLP_COMMON=y
 CONFIG_BOARD_CLEVO_NV40PZ_BASE=y
@@ -163,6 +165,7 @@ CONFIG_BOARD_CLEVO_NV40PZ_BASE=y
 CONFIG_TPM_PIRQ=0x27
 # CONFIG_SOC_INTEL_CSE_SEND_EOP_EARLY is not set
 CONFIG_VBOOT_FWID_VERSION="$(CONFIG_LOCALVERSION)"
+# CONFIG_DEBUG_SMI is not set
 CONFIG_EC_DASHARO_EC_BAT_THRESHOLDS=y
 CONFIG_DCACHE_RAM_BASE=0xfef00000
 CONFIG_DCACHE_RAM_SIZE=0xc0000
@@ -178,7 +181,6 @@ CONFIG_ME_BIN_PATH="3rdparty/dasharo-blobs/novacustom/nv4x_adl/me.bin"
 CONFIG_CONSOLE_CBMEM_BUFFER_SIZE=0x40000
 CONFIG_CARDBUS_PLUGIN_SUPPORT=y
 CONFIG_SPI_FLASH_DONT_INCLUDE_ALL_DRIVERS=y
-# CONFIG_DEBUG_SMI is not set
 CONFIG_HAVE_IFD_BIN=y
 CONFIG_PCIEXP_HOTPLUG_BUSES=42
 CONFIG_PCIEXP_HOTPLUG_MEM=0xc200000
@@ -300,7 +302,6 @@ CONFIG_SOC_INTEL_UART_DEV_MAX=7
 CONFIG_SOC_INTEL_COMMON_LPSS_UART_CLK_M_VAL=0x25a
 CONFIG_SOC_INTEL_COMMON_LPSS_UART_CLK_N_VAL=0x7fff
 CONFIG_FSP_HEADER_PATH="3rdparty/fsp/AlderLakeFspBinPkg/Client/AlderLakeP/Include/"
-CONFIG_FSP_FD_PATH="3rdparty/fsp/RaptorLakeFspBinPkg/Client/RaptorLakeP/Fsp.fd"
 CONFIG_SOC_INTEL_COMMON_DEBUG_CONSENT=0
 CONFIG_DATA_BUS_WIDTH=128
 CONFIG_DIMMS_PER_CHANNEL=2
@@ -463,7 +464,7 @@ CONFIG_SOC_INTEL_ENABLE_USB4_PCIE_RESOURCES=y
 CONFIG_FIRMWARE_CONNECTION_MANAGER=y
 # CONFIG_SOFTWARE_CONNECTION_MANAGER is not set
 CONFIG_SOC_INTEL_COMMON_BLOCK_VTD=y
-CONFIG_ENABLE_EARLY_DMA_PROTECTION=y
+# CONFIG_ENABLE_EARLY_DMA_PROTECTION is not set
 CONFIG_SOC_INTEL_COMMON_BLOCK_XDCI=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_XHCI=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_XHCI_ELOG=y
