modules/coreboot + config/coreboot-novacustom* config/coreboot-nitropad-ns50 : bump to latest dasharo 1.0.0 release for v540tu
    repro:
    ./docker_repro.sh make BOARD=novacustom-v540tu coreboot.save_in_oldconfig_format_in_place
    ./docker_repro.sh make BOARD=novacustom-v560tu coreboot.save_in_oldconfig_format_in_place
    ./docker_repro.sh make BOARD=novacustom-nv4x_adl coreboot.save_in_oldconfig_format_in_place
    ./docker_repro.sh make BOARD=UNTESTED_nitropad-ns50 coreboot.save_in_oldconfig_format_in_place

TODO: seperate MSI/nv4x_adl/v56mtl/ns50 boards: only v56mtl are 1.0.0

Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-novacustom-v540tu.config
+++ b/config/coreboot-novacustom-v540tu.config
@@ -6,7 +6,7 @@
 #
 # General setup
 #
-CONFIG_LOCALVERSION="v1.0.0-rc6"
+CONFIG_LOCALVERSION="v1.0.0"
 CONFIG_CBFS_PREFIX="fallback"
 CONFIG_COMPILER_GCC=y
 # CONFIG_COMPILER_LLVM_CLANG is not set
@@ -153,9 +153,10 @@ CONFIG_INTEL_GMA_VBT_FILE="src/mainboard/$(MAINBOARDDIR)/variants/$(VARIANT_DIR)
 CONFIG_PRERAM_CBMEM_CONSOLE_SIZE=0x2000
 CONFIG_MAINBOARD_SMBIOS_PRODUCT_NAME="V54x_6x_TU"
 # CONFIG_CONSOLE_POST is not set
+CONFIG_FSP_FD_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/MeteorLakeFspBinPkg/Fsp.fd"
+CONFIG_MAX_SOCKET=1
 CONFIG_CMOS_DEFAULT_FILE="src/mainboard/$(MAINBOARDDIR)/cmos.default"
 CONFIG_CMOS_LAYOUT_FILE="src/mainboard/$(MAINBOARDDIR)/cmos.layout"
-CONFIG_MAX_SOCKET=1
 CONFIG_BOOT_DEVICE_SPI_FLASH_BUS=0
 # CONFIG_USE_PM_ACPI_TIMER is not set
 CONFIG_TPM_PIRQ=0x61
@@ -293,7 +294,6 @@ CONFIG_SOC_INTEL_UART_DEV_MAX=3
 CONFIG_SOC_INTEL_COMMON_LPSS_UART_CLK_M_VAL=0x25a
 CONFIG_SOC_INTEL_COMMON_LPSS_UART_CLK_N_VAL=0x7fff
 CONFIG_FSP_HEADER_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/MeteorLakeFspBinPkg/Include/"
-CONFIG_FSP_FD_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/MeteorLakeFspBinPkg/Fsp.fd"
 CONFIG_SOC_INTEL_COMMON_DEBUG_CONSENT=0
 CONFIG_DATA_BUS_WIDTH=128
 CONFIG_DIMMS_PER_CHANNEL=2
@@ -315,7 +315,7 @@ CONFIG_SOC_INTEL_METEORLAKE_U_H=y
 CONFIG_SOC_INTEL_METEORLAKE_TCSS_USB4_SUPPORT=y
 CONFIG_METEORLAKE_CAR_ENHANCED_NEM=y
 CONFIG_CPU_MAX_TEMPERATURE=110
-CONFIG_IOE_PCR_BASE_ADDRESS=0x60000000
+CONFIG_IOE_PCR_BASE_ADDRESS=0x3fff0000000
 CONFIG_SOC_INTEL_USB2_DEV_MAX=10
 CONFIG_SOC_INTEL_USB3_DEV_MAX=2
 CONFIG_SOC_INTEL_GFX_FRAMEBUFFER_OFFSET=0x800000
@@ -463,7 +463,7 @@ CONFIG_SOC_INTEL_ENABLE_USB4_PCIE_RESOURCES=y
 CONFIG_FIRMWARE_CONNECTION_MANAGER=y
 # CONFIG_SOFTWARE_CONNECTION_MANAGER is not set
 CONFIG_SOC_INTEL_COMMON_BLOCK_VTD=y
-CONFIG_ENABLE_EARLY_DMA_PROTECTION=y
+# CONFIG_ENABLE_EARLY_DMA_PROTECTION is not set
 CONFIG_SOC_INTEL_COMMON_BLOCK_XDCI=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_XHCI=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_XHCI_ELOG=y
@@ -539,7 +539,7 @@ CONFIG_SOUTHBRIDGE_INTEL_COMMON_SMBUS=y
 CONFIG_SOUTHBRIDGE_INTEL_COMMON_PIRQ_ACPI_GEN=y
 CONFIG_HAVE_INTEL_CHIPSET_LOCKDOWN=y
 CONFIG_INTEL_DESCRIPTOR_MODE_CAPABLE=y
-# CONFIG_VALIDATE_INTEL_DESCRIPTOR is not set
+CONFIG_VALIDATE_INTEL_DESCRIPTOR=y
 # CONFIG_INTEL_CHIPSET_LOCKDOWN is not set
 CONFIG_FIXED_RCBA_MMIO_BASE=0xfed1c000
 CONFIG_RCBA_LENGTH=0x4000
