w541 board: select CONFIG_VALIDATE_INTEL_DESCRIPTOR=y
Signed-off-by: gaspar-ilom <gasparilom@riseup.net>

--- a/config/coreboot-w541.config
+++ b/config/coreboot-w541.config
@@ -368,7 +368,7 @@ CONFIG_HAVE_INTEL_CHIPSET_LOCKDOWN=y
 CONFIG_SOUTHBRIDGE_INTEL_COMMON_FINALIZE=y
 CONFIG_SOUTHBRIDGE_INTEL_COMMON_USB_DEBUG=y
 CONFIG_INTEL_DESCRIPTOR_MODE_CAPABLE=y
-# CONFIG_VALIDATE_INTEL_DESCRIPTOR is not set
+CONFIG_VALIDATE_INTEL_DESCRIPTOR=y
 # CONFIG_INTEL_CHIPSET_LOCKDOWN is not set
 CONFIG_TCO_SPACE_NOT_YET_SPLIT=y
 CONFIG_SOUTHBRIDGE_INTEL_COMMON_WATCHDOG=y
