WiP spectre checker
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/busybox.config
+++ b/config/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.36.1
-# Thu Oct  5 11:19:09 2023
+# Sun Nov 16 21:35:06 2025
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -299,7 +299,7 @@ CONFIG_MV=y
 CONFIG_NL=y
 # CONFIG_NOHUP is not set
 CONFIG_NPROC=y
-# CONFIG_OD is not set
+CONFIG_OD=y
 CONFIG_PASTE=y
 # CONFIG_PRINTENV is not set
 CONFIG_PRINTF=y
