config/coreboot-*: apply CONFIG_VALIDATE_INTEL_DESCRIPTOR=y since patch doesn't work
patches/coreboot-25.09/0012-sb-intel-common-Validate-IFD-by-default.patch should enable VALIDATE_INTEL_DESCRIPTOR for each board config having HAVE_IFD_BIN=y if INTEL_DESCRIPTOR_MODE_CAPABLE.
It doesn't.

A clean repro would be to save in oldconfig each coreboot board config that is 4+8 doing:
./docker_repro.sh
grep -R split_8mb4mb boards/ | awk -F "/" {'print $2'} | while read board; do echo $board; rm -rf build/x86/coreboot-25.09/$board; make BOARD=$board coreboot.save_in_oldconfig_format_in_place; done

Which requires to make sure that patches are applied on a clean checkout coreboot git tree:
echo "bogus" | sudo tee build/x86/coreboot-25.09/.canary
./docker_repro.sh make BOARD=EOL_x230-maximized
./docker_repro.sh
grep -R split_8mb4mb boards/ | awk -F "/" {'print $2'} | while read board; do echo $board; rm -rf build/x86/coreboot-25.09/$board; make BOARD=$board coreboot.save_in_oldconfig_format_in_place; done

But doesn't.

Here we make sure we validate IFD for all boards that should if patches/coreboot-25.09/0012-sb-intel-common-Validate-IFD-by-default.patch was doing its job
sed 's/# CONFIG_VALIDATE_INTEL_DESCRIPTOR is not set/CONFIG_VALIDATE_INTEL_DESCRIPTOR=y/g' config/coreboot-* -i

Notes:
We have 2 x 0012 patches here.

Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-librem_11.config
+++ b/config/coreboot-librem_11.config
@@ -408,7 +408,7 @@ CONFIG_CPU_UCODE_BINARIES="3rdparty/purism-blobs/mainboard/purism/librem_jsl/cpu
 CONFIG_INTEL_DESCRIPTOR_MODE_REQUIRED=y
 CONFIG_SOUTHBRIDGE_INTEL_COMMON_SMBUS=y
 CONFIG_INTEL_DESCRIPTOR_MODE_CAPABLE=y
-# CONFIG_VALIDATE_INTEL_DESCRIPTOR is not set
+CONFIG_VALIDATE_INTEL_DESCRIPTOR=y
 CONFIG_FIXED_RCBA_MMIO_BASE=0xfed1c000
 CONFIG_RCBA_LENGTH=0x4000
 
