--- a/config/coreboot-librem_l1um.config
+++ b/config/coreboot-librem_l1um.config
@@ -344,7 +344,7 @@ CONFIG_SOUTHBRIDGE_INTEL_COMMON_SPI=y
 # CONFIG_SOUTHBRIDGE_INTEL_COMMON_USB_DEBUG is not set
 CONFIG_INTEL_DESCRIPTOR_MODE_CAPABLE=y
 CONFIG_INTEL_DESCRIPTOR_MODE_REQUIRED=y
-# CONFIG_VALIDATE_INTEL_DESCRIPTOR is not set
+CONFIG_VALIDATE_INTEL_DESCRIPTOR=y
 
 #
 # Super I/O
