--- a/config/coreboot-qemu-tpm1.config
+++ b/config/coreboot-qemu-tpm1.config
@@ -292,7 +292,7 @@ CONFIG_SOUTHBRIDGE_INTEL_COMMON_RCBA_PIRQ=y
 CONFIG_SOUTHBRIDGE_INTEL_COMMON_SMM=y
 CONFIG_SOUTHBRIDGE_INTEL_COMMON_USB_DEBUG=y
 CONFIG_INTEL_DESCRIPTOR_MODE_CAPABLE=y
-# CONFIG_VALIDATE_INTEL_DESCRIPTOR is not set
+CONFIG_VALIDATE_INTEL_DESCRIPTOR=y
 CONFIG_TCO_SPACE_NOT_YET_SPLIT=y
 CONFIG_SOUTHBRIDGE_INTEL_COMMON_WATCHDOG=y
 CONFIG_FIXED_RCBA_MMIO_BASE=0xfed1c000
