modules/coreboot + config/coreboot-novacustom* config/coreboot-nitropad-ns50 : bump to latest dasharo 1.0.0 release for v540tu
repro:
./docker_repro.sh make BOARD=novacustom-v540tu coreboot.save_in_oldconfig_format_in_place
./docker_repro.sh make BOARD=novacustom-v560tu coreboot.save_in_oldconfig_format_in_place
./docker_repro.sh make BOARD=novacustom-nv4x_adl coreboot.save_in_oldconfig_format_in_place
./docker_repro.sh make BOARD=UNTESTED_nitropad-ns50 coreboot.save_in_oldconfig_format_in_place

Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-novacustom-v540tu.config
+++ b/config/coreboot-novacustom-v540tu.config
@@ -6,7 +6,7 @@
 #
 # General setup
 #
-CONFIG_LOCALVERSION="v1.0.0 20251130"
+CONFIG_LOCALVERSION="v1.0.0"
 CONFIG_CBFS_PREFIX="fallback"
 CONFIG_COMPILER_GCC=y
 # CONFIG_COMPILER_LLVM_CLANG is not set
@@ -37,7 +37,6 @@ CONFIG_TSEG_STAGE_CACHE=y
 # CONFIG_UPDATE_IMAGE is not set
 CONFIG_BOOTSPLASH_IMAGE=y
 CONFIG_BOOTSPLASH_FILE="@BRAND_DIR@/bootsplash.jpg"
-CONFIG_BOOTSPLASH_REGION_LOGO_FILE=""
 CONFIG_BOOTSPLASH_CONVERT=y
 CONFIG_BOOTSPLASH_CONVERT_QUALITY=90
 # CONFIG_BOOTSPLASH_CONVERT_RESIZE is not set
@@ -163,7 +162,6 @@ CONFIG_BOOT_DEVICE_SPI_FLASH_BUS=0
 CONFIG_TPM_PIRQ=0x61
 # CONFIG_SOC_INTEL_CSE_SEND_EOP_EARLY is not set
 CONFIG_VBOOT_FWID_VERSION="$(CONFIG_LOCALVERSION)"
-# CONFIG_DEBUG_SMI is not set
 CONFIG_EC_DASHARO_EC_BAT_THRESHOLDS=y
 CONFIG_PXE_ROM_ID="8086,550a"
 CONFIG_DCACHE_RAM_BASE=0xfef00000
@@ -181,6 +179,7 @@ CONFIG_GBE_BIN_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/gbe.bin"
 CONFIG_CONSOLE_CBMEM_BUFFER_SIZE=0x40000
 CONFIG_CARDBUS_PLUGIN_SUPPORT=y
 CONFIG_SPI_FLASH_DONT_INCLUDE_ALL_DRIVERS=y
+# CONFIG_DEBUG_SMI is not set
 CONFIG_HAVE_IFD_BIN=y
 CONFIG_PCIEXP_HOTPLUG_BUSES=42
 CONFIG_PCIEXP_HOTPLUG_MEM=0xc200000
