qemu-boards & coreboot configs: switch to single console for I/O: ttyS0
TODO: refactor/review config/coreboot-qemu-tpm*.config: there would be a need for individual single terminal configs (Linux cmdline) otherwise we override prod configs
(undoing prod board and coreboot config might be enough, but do not care right now)

Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/boards/qemu-coreboot-whiptail-tpm2-prod/qemu-coreboot-whiptail-tpm2-prod.config
+++ b/boards/qemu-coreboot-whiptail-tpm2-prod/qemu-coreboot-whiptail-tpm2-prod.config
@@ -75,10 +75,10 @@ export CONFIG_PRIMARY_KEY_TYPE=ecc
 #TPM1 requirements
 #export CONFIG_TPM=y
 #Enable DEBUG output
-export CONFIG_DEBUG_OUTPUT=n
-export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=n
+export CONFIG_DEBUG_OUTPUT=y
+export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=y
 #Enable TPM2 pcap output under /tmp
-export CONFIG_TPM2_CAPTURE_PCAP=n
+export CONFIG_TPM2_CAPTURE_PCAP=y
 #Enable quiet mode: technical information logged under /tmp/debug.log
 export CONFIG_QUIET_MODE=n
 export CONFIG_BOOTSCRIPT=/bin/gui-init
@@ -86,9 +86,8 @@ export CONFIG_BOOTSCRIPT=/bin/gui-init
 #export CONFIG_BOOTSCRIPT=/bin/generic-init
 export CONFIG_BOOT_REQ_HASH=n
 export CONFIG_BOOT_REQ_ROLLBACK=n
-export CONFIG_BOOT_RECOVERY_SERIAL="/dev/ttyS0"
-export CONFIG_BOOT_KERNEL_ADD="console=ttyS0 console=tty systemd.zram=0"
-export CONFIG_BOOT_KERNEL_REMOVE="quiet rhgb splash"
+export CONFIG_BOOT_KERNEL_ADD="console=ttyS0,115200n8 systemd.zram=0"
+export CONFIG_BOOT_KERNEL_REMOVE="quiet rhgb splash console=tty0"
 export CONFIG_BOARD_NAME="qemu-coreboot-whiptail-tpm2"
 #export CONFIG_FLASH_OPTIONS="flashprog --progress --programmer internal"
 
