--- a/config/coreboot-qemu-tpm2.config
+++ b/config/coreboot-qemu-tpm2.config
@@ -189,7 +189,7 @@ CONFIG_EC_STARLABS_BATTERY_MODEL="Unknown"
 CONFIG_EC_STARLABS_BATTERY_TYPE="LION"
 CONFIG_EC_STARLABS_BATTERY_OEM="Unknown"
 CONFIG_TPM_MEASURED_BOOT=y
-CONFIG_LINUX_COMMAND_LINE="debug console=ttyS0,115200 console=tty"
+CONFIG_LINUX_COMMAND_LINE="debug console=ttyS0,115200"
 CONFIG_BOARD_ROMSIZE_KB_8192=y
 # CONFIG_COREBOOT_ROMSIZE_KB_256 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_512 is not set
